AArch64 build failures after -Wno-extra removal

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 14
    • Affects Version/s: 8-aarch64, 11, 13, 14
    • Component/s: hotspot
    • None
    • Environment:
      • Toolchain: gcc (GNU Compiler Collection)
      • C Compiler: Version 4.8.5 (at /usr/bin/gcc)
      • C++ Compiler: Version 4.8.5 (at /usr/bin/g++)
    • b23
    • aarch64

      JDK-8211073 exposed problems in AArch64 code:

      * For target hotspot_variant-server_libjvm_objs_accessBarrierSupport.o:
      In file included from /home/shade/jdk-jdk/src/hotspot/share/runtime/orderAccess.hpp:317:0,
                       from /home/shade/jdk-jdk/src/hotspot/share/oops/array.hpp:30,
                       from /home/shade/jdk-jdk/src/hotspot/share/oops/annotations.hpp:28,
                       from /home/shade/jdk-jdk/src/hotspot/share/oops/instanceKlass.hpp:30,
                       from /home/shade/jdk-jdk/src/hotspot/share/runtime/reflectionUtils.hpp:29,
                       from /home/shade/jdk-jdk/src/hotspot/share/classfile/systemDictionary.hpp:33,
                       from /home/shade/jdk-jdk/src/hotspot/share/classfile/javaClasses.hpp:28,
                       from /home/shade/jdk-jdk/src/hotspot/share/classfile/javaClasses.inline.hpp:28,
                       from /home/shade/jdk-jdk/src/hotspot/share/gc/shared/accessBarrierSupport.cpp:26:
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/orderAccess_linux_aarch64.hpp: In instantiation of 'T OrderAccess::PlatformOrderedLoad<byte_size, (ScopedFenceType)0u>::operator()(const volatile T*) const [with T = unsigned int; long unsigned int byte_size = 4ul]':
      /home/shade/jdk-jdk/src/hotspot/share/runtime/atomic.hpp:383:29: required from 'T Atomic::LoadImpl<T, PlatformOp, typename EnableIf<((IsIntegral<T>::value || IsRegisteredEnum<T>::value) || IsPointer<T>::value)>::type>::operator()(const volatile T*) const [with T = unsigned int; PlatformOp = OrderAccess::PlatformOrderedLoad<4ul, (ScopedFenceType)0u>; typename EnableIf<((IsIntegral<T>::value || IsRegisteredEnum<T>::value) || IsPointer<T>::value)>::type = void]'
      /home/shade/jdk-jdk/src/hotspot/share/runtime/orderAccess.hpp:339:69: required from 'static T OrderAccess::load_acquire(const volatile T*) [with T = unsigned int]'
      /home/shade/jdk-jdk/src/hotspot/share/oops/oop.inline.hpp:113:75: required from here
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/orderAccess_linux_aarch64.hpp:58:5: error: parameter 'p' set but not used [-Werror=unused-but-set-parameter]
         T operator()(const volatile T* p) const { T data; __atomic_load(p, &data, __ATOMIC_ACQUIRE); return data; }
         ... (rest of output omitted)
      * For target hotspot_variant-server_libjvm_objs_accessFlags.o:
      In file included from /home/shade/jdk-jdk/src/hotspot/share/runtime/orderAccess.hpp:317:0,
                       from /home/shade/jdk-jdk/src/hotspot/share/oops/array.hpp:30,
                       from /home/shade/jdk-jdk/src/hotspot/share/oops/annotations.hpp:28,
                       from /home/shade/jdk-jdk/src/hotspot/share/oops/method.hpp:33,
                       from /home/shade/jdk-jdk/src/hotspot/share/runtime/frame.hpp:28,
                       from /home/shade/jdk-jdk/src/hotspot/share/code/codeBlob.hpp:31,
                       from /home/shade/jdk-jdk/src/hotspot/share/code/compiledMethod.hpp:28,
                       from /home/shade/jdk-jdk/src/hotspot/share/runtime/thread.hpp:29,
                       from /home/shade/jdk-jdk/src/hotspot/share/runtime/safepoint.hpp:30,
                       from /home/shade/jdk-jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
                       from /home/shade/jdk-jdk/src/hotspot/share/oops/oop.inline.hpp:28,
                       from /home/shade/jdk-jdk/src/hotspot/share/utilities/accessFlags.cpp:26:
      /home/shade/jdk-jdk/src/hotspot/os_cpu/linux_aarch64/orderAccess_linux_aarch64.hpp: In instantiation of 'T OrderAccess::PlatformOrderedLoad<byte_size, (ScopedFenceType)0u>::operator()(const volatile T*) const [with T = signed char; long unsigned int byte_size = 1ul]':
      /home/shade/jdk-jdk/src/hotspot/share/runtime/atomic.hpp:383:29: required from 'T Atomic::LoadImpl<T, PlatformOp, typename EnableIf<((IsIntegral<T>::value || IsRegisteredEnum<T>::value) || IsPointer<T>::value)>::type>::operator()(const volatile T*) const [with T = signed char; PlatformOp = OrderAccess::PlatformOrderedLoad<1ul, (ScopedFenceType)0u>; typename EnableIf<((IsIntegral<T>::value || IsRegisteredEnum<T>::value) || IsPointer<T>::value)>::type = void]'
      /home/shade/jdk-jdk/src/hotspot/share/runtime/orderAccess.hpp:339:69: required from 'static T OrderAccess::load_acquire(const volatile T*) [with T = signed char]'
         ... (rest of output omitted)

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: