8233695: AArch64 build failures after -Wno-extra removal

Reviewed-by: aph